Update pointfree examples